@@ -7,172 +7,104 @@
 
 1. jdk1.9 
 
-## 
-### 命令行工具
+## 命令行工具 
+
 jdk自带的一些命令行工具，用来分析运行的java实例的内存使用情况。  
 
-#### jps（JVM Process Status Tool）： 查看虚拟机进程状况  
+### jps（JVM Process Status Tool）： 查看虚拟机进程状况  
 
-* 说明： 
-
-		usage: jps [-help]
-	       jps [-q] [-mlvV] [<hostid>]
-	
-		Definitions:
-		    <hostid>:      <hostname>[:<port>]  
-	
 * `-q` 显示进程ID
 * `-m` 显示启动时传递给主类的参数 
 * `-l` 输出主类的全名（包含包路径）
 * `-v` 启动时指定的虚拟机配置参数
 
-#### jstat (JVM Statistics Monitoring Tool)：虚拟机统计信息监视工具，以及传递配置参数给虚拟机 `-J-Xms48m`
-* 详细解释参考：[jstat官方文档](https://docs.oracle.com/javase/9/tools/jstat.htm#JSWOR734)
-	
-* 说明：   
+### jstat 虚拟机统计信息监视工具，以及传递配置参数给虚拟机
 
-		Usage: jstat -help|-options
-		       jstat -<option> [-t] [-h<lines>] <vmid> [<interval> [<count>]]
-		Definitions:
-		  <option>      An option reported by the -options option
-		  <vmid>        Virtual Machine Identifier. A vmid takes the following form:
-		                     <lvmid>[@<hostname>[:<port>]]
-		                Where <lvmid> is the local vm identifier for the target
-		                Java virtual machine, typically a process id; <hostname> is
-		                the name of the host running the target Java virtual machine;
-		                and <port> is the port number for the rmiregistry on the
-		                target host. See the jvmstat documentation for a more complete
-		                description of the Virtual Machine Identifier.
-		  <lines>       Number of samples between header lines.
-		  <interval>    Sampling interval. The following forms are allowed:
-		                    <n>["ms"|"s"]
-		                Where <n> is an integer and the suffix specifies the units as
-		                milliseconds("ms") or seconds("s"). The default units are "ms".
-		  <count>       Number of samples to take before terminating.
-		  -J<flag>      Pass <flag> directly to the runtime system. 
-* 支持的选项：
+**用法：**`jstat options -hn <vmid> 输出时间间隔 输出次数`
 
-	* class: Displays statistics about the behavior of the class loader.
+`options` 可以是下面的参数，`-hn` 表示多少次之后输出一次标题。
 
-		* Loaded: Number of classes loaded.
+* `-class`
+* `-compiler`
+* `-gc` GC 信息。
+* `-gccapacity`
+* `-gccause` 导致GC的原因，百分比形式显示。
+* `-gcmetacapacity`
+* `-gcnew`
+* `-gcnewcapacity`
+* `-gcold`
+* `-gcoldcapacity`
+* `-gcutil`
+* `-printcompilation`
 
-		* Bytes: Number of KB loaded.
-		
-		* Unloaded: Number of classes unloaded.
-		
-		* Bytes: Number of KB loaded.
-			
-		* Time: Time spent performing class loading and unloading operations.
+**示例：**
 
-	* compiler: Displays statistics about the behavior of the Java HotSpot VM Just-in-Time compiler.
+1. 监听老年代GC信息。
 
-		* Compiled: Number of compilation tasks performed.
-		
-		* Failed: Number of compilations tasks failed.
-		
-		* Invalid: Number of compilation tasks that were invalidated.
-		
-		* Time: Time spent performing compilation tasks.
-		
-		* FailedType: Compile type of the last failed compilation.
-		
-		* FailedMethod: Class name and method of the last failed compilation.
-
-	* gc: Displays statistics about the behavior of the garbage collected heap.
-
-	* gccapacity: Displays statistics about the capacities of the generations and their corresponding spaces.
-
-	* gccause: Displays a summary about garbage collection statistics (same as -gcutil), with the cause of the last and current (when applicable) garbage collection events.
-
-	* gcnew: Displays statistics about the behavior of the new generation.
-
-	* gcnewcapacity: Displays statistics about the sizes of the new generations and their corresponding spaces.
-
-	* gcold: Displays statistics about the behavior of the old generation and metaspace statistics.
-
-	* gcoldcapacity: Displays statistics about the sizes of the old generation.
-
-	* gcmetacapacity: Displays statistics about the sizes of the metaspace.
-
-	* gcutil: Displays a summary about garbage collection statistics.
-
-	* printcompilation: Displays Java HotSpot VM compilation method statistics.
-
-* 例如：
-
-		// 查看进程id为59270的老年代信息，每隔五行输出一次标题，每隔一秒输出一次，只输出十次
 		jstat -gcold -h5 59270 1000 10
-#### jinfo 查看 Java配置信息  
+2. 监听虚拟机GC信息。 
 
-* 详细参考： [jinfo官方文档](https://docs.oracle.com/javase/9/tools/jinfo.htm#JSWOR744)
+		jstat -gc -h20 59270 1000 1000
 
-* 说明：  
+### jinfo 查看系统参数，查看和设置 VMFLag。
+1.  `jinfo 123456` 输出信息如下：
 
-		Usage:
-		    jinfo <option> <pid>
-		       (to connect to a running process)
-		
-		where <option> is one of:
-		    -flag <name>         to print the value of the named VM flag
-		    -flag [+|-]<name>    to enable or disable the named VM flag
-		    -flag <name>=<value> to set the named VM flag to the given value
-		    -flags               to print VM flags
-		    -sysprops            to print Java system properties
-		    <no option>          to print both VM flags and system properties
-		    -h | -help           to print this help message
+		Java System Properties:
+		java.runtime.name = Java(TM) SE Runtime Environment
+		java.vm.version = 25.221-b11
+		sun.boot.library.path = /home/xiaotian/software/java/jdk1.8.0_221/jre/lib/amd64
+		java.protocol.handler.pkgs = org.springframework.boot.loader
+		java.vendor.url = http://java.oracle.com/
+		java.vm.vendor = Oracle Corporation
+		path.separator = :
+		... ...
+		java.version = 1.8.0_221
+		java.ext.dirs = /home/xiaotian/software/java/jdk1.8.0_221/jre/lib/ext:/usr/java/packages/lib/ext
+		sun.boot.class.path = /home/xiaotian/software/java/jdk1.8.0_221/jre/lib/resources.jar:/home/xiaotian/software/java/jdk1.8.0_221/jre/lib/rt.jar:/home/xiaotian/software/java/jdk1.8.0_221/jre/lib/sunrsasign.jar:/home/xiaotian/software/java/jdk1.8.0_221/jre/lib/jsse.jar:/home/xiaotian/software/java/jdk1.8.0_221/jre/lib/jce.jar:/home/xiaotian/software/java/jdk1.8.0_221/jre/lib/charsets.jar:/home/xiaotian/software/java/jdk1.8.0_221/jre/lib/jfr.jar:/home/xiaotian/software/java/jdk1.8.0_221/jre/classes
+		java.awt.headless = true
+		java.vendor = Oracle Corporation
+		catalina.base = /tmp/tomcat.5571146530846755836.8082
+		com.zaxxer.hikari.pool_number = 1
+		file.separator = /
+		java.vendor.url.bug = http://bugreport.sun.com/bugreport/
+		sun.io.unicode.encoding = UnicodeLittle
+		sun.cpu.endian = little
+		sun.cpu.isalist =
 
-* 使用：
-		
-		//搜索 `headless` 模式配置
- 		jinfo 59270| grep "headless"
-#### jmap 输出指定进程的详细信息  
-* 详细参考：[jmap官方文档](https://docs.oracle.com/javase/9/tools/jmap.htm#JSWOR746)
+		VM Flags:
+		Non-default VM flags: -XX:CICompilerCount=2 -XX:InitialHeapSize=134217728 -XX:MaxHeapSize=536870912 -XX:MaxNewSize=178913280 -XX:MinHeapDeltaBytes=196608 -XX:NewSize=44695552 -XX:OldSize=89522176 -XX:+PrintGC -XX:+PrintGCTimeStamps -XX:+UseCompressedClassPointers -XX:+UseCompressedOops -XX:+UseFastUnorderedTimeStamps
+		Command line:  -XX:+PrintGC -Xloggc:./gc.log -Xms128m -Xmx512m -Dloader.path=/home/xiaotian/tools/lib/ -Dspring.profiles.active=dev
+2. 设置 VM FLAG。
 
-* 说明：
+	* `jinfo -flag <name>` 打印 VM Flag。
+	* `jinfo [+|-] -flag` 启用或禁用 VM Flag。
+	* `jinfo -flag <name>=<value>` 设置 VM flag。
+	* `jinfo -flags 12345` 打印 VM Flag。
+### jmap 输出指定进程的详细信息  
 
-		Usage:
-		    jmap -clstats <pid>
-		        to connect to running process and print class loader statistics
-		    jmap -finalizerinfo <pid>
-		        to connect to running process and print information on objects awaiting finalization
-		    jmap -histo[:live] <pid>
-		        to connect to running process and print histogram of java object heap
-		        if the "live" suboption is specified, only count live objects
-		    jmap -dump:<dump-options> <pid>
-		        to connect to running process and dump java heap
-		
-		    dump-options:
-		      live         dump only live objects; if not specified,
-		                   all objects in the heap are dumped.
-		      format=b     binary format
-		      file=<file>  dump heap to <file>
-		
-		    Example: jmap -dump:live,format=b,file=heap.bin <pid>
-* 使用:  
+1. `jmap -h` 查看帮助信息。
+2. `jmap -heap 12345` 查看虚拟机堆内存使用情况。
+3. `jmap -histo 12345` 查看类的实例数量以及占用内存。
+4. `jmap -clstats 12345` 查看类加载器统计信息。
+5. `jmap -finalizerinfo 12345` 查看等待释放的类。
+6. `jmap -dump:format=b,file=./heap.bin 12345` dump 堆栈信息。 
 
-		jmap -dump:,format=b,file=heap.bin 59270
+### jstack 堆栈跟踪工具  
 
-#### jhsdb 堆快照分析工具  
+1. `jstack -l 12345` 查看线程堆栈信息。 
+2. `jstack -m 12345` 查看线程堆栈信息，内存地址模式。
+3. `jstack -F -l 12345` 强制执行，当 `jstack -l` 无响应时使用。
 
-#### jstatd 用于远程分析  
-* 遇到一个坑，由于1.9版本移除了 `tools.jar`，授权的时候会报错，解决了一段时间没有解决。
+## 命令行工具输出信息含义 
 
-	开放所有权限（危险），依然没有解决：
-	
-		grant {
-		    permission java.security.AllPermission;
-		};
-
-#### jstack 堆栈跟踪工具  
-
-* 详细描述 ： [jstack官方文档](https://docs.oracle.com/javase/9/tools/jstack.htm#JSWOR748)
-
-* 说明：  
-
-		Usage:
-		    jstack [-l] <pid>
-		        (to connect to running process)
-		
-		Options:
-		    -l  long listing. Prints additional information about locks
-		    -h or -help to print this help message
+* `S0C、S1C、S0U、S1U、S0CMX、SC1MX ` Survior 0/1 容量、使用量和最大容量。
+* `EC EU` Eden 区容量和使用量。
+* `OC OU` 老年代容量和使用量。
+* `M MC MU MCMN MCMX` MetaSpace 区使用率、容量、使用量、最小容量和最大容量。
+* `YGC YGCT` 新生代GC次数和耗时。
+* `FGC FGCT` FULL GC 次数和耗时。
+* `GCT` GC的全部耗时。
+* `NGCMN NGCMX` 新生代最小和最大容量。
+* `TT MTT` 对象经过指定次数的垃圾回收会被复制到老年代。
+* `Loadedjvm Unloadedjvm` 加载类数量和未加载类数量。
+* `CCS CCSC CCSU CCSMN CCSMX` 压缩使用率、容量、使用量、最小容量和最大容量。
